[package]
name = "rogue-1"
version = "0.1.0"
authors = ["Mrityunjay Saxena <mrityunjaysaxena1996@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.0" }
specs = "0.16.1"
specs-derive = "0.4.1"
